--- a/Tutto/rinn.css
+++ b/Tutto/rinn.css
@@ -13,9 +13,21 @@ body{
     
 }
 
+h1,h2,p{
+    font-family: 'Anek Latin', sans-serif;
+}
+
+
 div{
    
     border-color: greenyellow;
+}
+.aaaaa{
+    font-weight: bold;
+    color: white(0, 0, 0);
+    display: inline-block;
+    width: 950px;
+    font-size: large;
 }
 
 .header{
@@ -34,11 +46,62 @@ margin-top: none;
     object-fit: contain;
     object-position: center;
     border-style: solid;
-    border-color: greenyellow;
+    border-color: rgb(195, 238, 131);
 }
 
 .bethhh{
     
     border-style: solid;
-    border-color: greenyellow;
+    border-color: rgb(195, 238, 131);
 }
+
+
+.general{
+           
+    display: grid;
+grid-template-columns: 1fr 1fr ;
+column-gap: 28px;
+row-gap: 40px;
+ }
+
+ .sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgb(195, 238, 131);
+    font-family: 'Anek Latin', sans-serif;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    color: black;
+    }
+    
+    .sidebar div {
+    padding: 8px 8px 8px 30px;
+    font-size: 24px;
+    display: block;
+    transition: 0.5s;
+    cursor: pointer;
+    }
+    
+    .sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    }
+    
+    .openbtn {
+    font-size: 24px;
+    cursor: pointer;
+    background-color: rgb(195, 238, 131);
+    color: black;
+    font-family: 'Anek Latin', sans-serif;
+    }
+    
+    #main {
+    transition: margin-left .5s;
+    }
+  
